Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 31.03.2022 08:15:16</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 31.03.2022 08:43:49</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 31.3.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem, rebarborou a borůvkami</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brownie</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Bavorské bagety s kuřecím či vepřovým masem</div>
+<div class="cena">79 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Polévka ze žlutého curry s kuřecím masem, rýžové nudle -v menu <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Polévka ze žlutého curry s kuřecím masem, rýžové nudle- samostatně <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Uzená krkovice, kysané zelí, bramborák, zakysaná smetana, pažitka <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>200g Poke bowl s marinovaným lososem, čerstvá zelenina, mungo klíčky, limetkový dresink <em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">189 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Halloumi sýr, grilovaná zelenina, pečené grenaillle, bylinkové pesto, slunečnicová semínka <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Skořápkové plody">8</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -91,7 +131,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z norskeho slede s pecenymi cherry rajcaty a citronovo-jogurtovou omackou, korenena ryze s beluga cockou, salatek 139</li><li>Peceny filet z cerstve norske tresky s pecenymi cherry rajcaty a citronovo-jogurtovnou omackou, korenena ryze s beluga cockou, salatek 169</li><li>Kantonske hovezi nudlicky s kedlubnou, fazolovymi lusky, zazvorem, sezamem a spetkou chilli, ryzove nudle 139</li><li>Jemne korenene jehneci kofte s citronovou jogurtovou omackou, zeleninove birjany z basmati ryze, salatek 169</li><li>Bramborove gnocchi s ratatouille z pecene letni zeleniny a ovcim cerstvym syrem {L} 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka se zeleninovym ratatouille, birjany z basmati ryze, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa se salotkovo-vinnou omackou, stouchane brambory, salatek z cervene repy 169</li><li>Indicka korma s krutim masem, pecenymi bataty, zazvorem, orisky a kokosovym mlekem, jasminova ryze 139</li><li>Burger s trhanou pecenou husou, cervenou repou, rukolou a horcicnym dresinkem, pecene brambory, salatek 169</li><li>Smazeny kvetakovy rizek s kapustou a ementalem, stouchane brambory, tatarska omacka {L} 139</li></ol>
 </td>
 </tr>
 </table>
