--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 31.03.2022 10:13:52</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 31.03.2022 10:37:20</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -131,7 +131,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka se zeleninovym ratatouille, birjany z basmati ryze, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa se salotkovo-vinnou omackou, stouchane brambory, salatek z cervene repy 169</li><li>Indicka korma s krutim masem, pecenymi bataty, zazvorem, orisky a kokosovym mlekem, jasminova ryze 139</li><li>Burger s trhanou pecenou husou, cervenou repou, rukolou a horcicnym dresinkem, pecene brambory, salatek 169</li><li>Smazeny kvetakovy rizek s kapustou a ementalem, stouchane brambory, tatarska omacka {L} 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka se zeleninovym ratatouille, birjany z basmati ryze, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa se salotkovo-vinnou omackou, stouchane brambory, salatek z cervene repy s krenem 169</li><li>Indicka korma s krutim masem, pecenymi bataty, zazvorem, orisky a kokosovym mlekem, jasminova ryze 139</li><li>Burger s trhanou pecenou husou, cervenou repou, rukolou a horcicnym dresinkem, pecene brambory, salatek 169</li><li>Smazeny kvetakovy rizek s kapustou a ementalem, stouchane brambory, tatarska omacka {L} 139</li></ol>
 </td>
 </tr>
 </table>
