--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 04.04.2022 08:19:26</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 04.04.2022 08:44:52</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -88,7 +88,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny file z atlanticke makrely s okurkovym relisem, bramborovy salat s cervenou repou, cibulkou, petrzelkou a troskou majonezy 139</li><li>Filet z norske tresky tmave v pivnim testicku s celozrnnou horcici, bramborovy salat s cervenou repou, cibulkou, petrzelkou a troskou majonezy, citron {L} 169</li><li>Wrap s grilovanym libanonskym veprovym v koreni baharat a pecenou zeleninou, jogurtovy dip s medvedim cesnekem, korenena ryze, salatek {L} 139</li><li>Grilovane medailonky z hoveziho valecku {angus/USA} s jogurtovym dipem s medvedim cesnekem, pecene brambory, salatek z cervene repy s krenem 169</li><li>Penne {bezlepkove / De Cecco} s omackou z lesnich zampionu a creme fraiche, sazene vejce, salatek 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka se syrskymi olivami a pestem z medvediho cesneku, zeleninovy kuskus, salatek {L} 139</li><li>Pecena cerstva kambala a platyz se syrskymi olivami a pestem z medvediho cesneku, zeleninovy kuskus, salatek {L} 169</li><li>Burrito s mexickym carnitas {trhane veprove}, pecene brambory, jogurtovy dip, salatek {L} 139</li><li>Smazene rizecky z mladeho divocaka, bramborovy salat s cervenou repou a cibulkou, citron {L} 169</li><li>Indicke kvetakove kari s cizrnou, rajcaty. zazvorem, kokosovym mlekem a jogurtem, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
