Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.04.2022 08:43:47</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.04.2022 09:11:54</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -60,6 +60,16 @@
 <li class="poznamka">
 <div class="polozka">Tiramisu</div>
 <div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Bezlepková Pavlova roláda</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Borůvkový cheesecake</div>
+<div class="cena">59 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="polevka">
@@ -129,7 +139,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s citronem a petrzelkovo-ancovickovym dresinkem, jarni bramborovy salat s pazitkou, redkvi a creme fraiche 145</li><li>Peceny filet z cerstveho norskeho lososa s citronem a petrzelkovo-ancovickovym dresinkem, jarni bramborovy salat s pazitkou, redkvi a creme fraiche 175</li><li>Indicke madras kari s krutim masem, pecenou dyni, paprikami a jogurtem, jasminova ryze 145</li><li>Rostbif z danci kyty s peprovou omackou, gratinovane brambory, salatek 175</li><li>Baba ganus z pecenych lilku a tahini s halloumi a tureckymi cernymi olivami, pecene brambory, salatek 145</li></ol>
+<ol><li>Peceny cerstvy pstruh s citronem a petrzelkovou tahini, cizrnovy salat s paprikami, zeleninou a beluga cockou 145</li><li>Peceny filet z cerstveho morskeho vlka s citronem a petrzelkovou tahini, cizrnovy salat s paprikami, zeleninou a beluga cockou 175</li><li>Secuansky „Ramen“ s psenicnymi nudlemi, gaj coj, slepicim masem, a sazenym vejcem v silnem slepicim vyvaru se zelenymi bylinkami {L} 145</li><li>Burrito se srncimi nudlickami, pecenou paprikou, cervenymi fazolemi a chipotle chilli, pecene brambory, jogurtovy dip, salatek {L} 169</li><li>Thajske arasidove kari s kvetakem, pecenym tofu, lilky a kokosovym mlekem, jasminova ryze 145</li></ol>
 </td>
 </tr>
 </table>
