Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.04.2022 08:45:39</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.04.2022 09:11:56</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,21 +7,21 @@
 <h5>Čtvrtek, 14. 04. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Dršťková</strong>
+<strong>Houbová krémová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřová plec na paprice s rýží</strong>
+<strong>Čočka s párkem, vejcem a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							129,-
 						</span>
 </p>
 <p>
-<strong>Smažený sýr s hranolkami a tatarkou</strong>
+<strong>Kuřecí roláda se špenátem a vařeným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
@@ -118,7 +118,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy pstruh s citronem a petrzelkovou tahini, cizrnovy salat s paprikami, zeleninou a beluga cockou 145</li><li>Peceny filet z cerstveho morskeho vlka s citronem a petrzelkovou tahini, cizrnovy salat s paprikami, zeleninou a beluga cockou 175</li><li>Secuansky „Ramen“ s psenicnymi nudlemi, gaj coj, slepicim masem, a sazenym vejcem v silnem slepicim vyvaru se zelenymi bylinkami {L} 145</li><li>Burrito se srncimi nudlickami, pecenou paprikou, cervenymi fazolemi a chipotle chilli, pecene brambory, jogurtovy dip, salatek {L} 169</li><li>Thajske arasidove kari s kvetakem, pecenym tofu, lilky a kokosovym mlekem, jasminova ryze 145</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s kaparovym maslem, stouchane brambory s porkem a creme fraiche, salatek 145</li><li>Paella s krevetami, kalamary, norskou treskou, zelenymi bylinkami, gaj coj a zeleninou, salatek 175</li><li>Indicke birjany z basmati ryze s trhanym hovezim na cibulce, fazolovymi lusky a zeleninou, okurkove tzatziki, salatek 145</li><li>Smazene rizecky z panenske svickove, stouchane brambory s porkem a creme fraiche, kysela okurka {L} 169</li><li>Pecene papriky a bataty zapecene s ementalem, pecene brambory, okurkove tzatziki 145</li></ol>
 </td>
 </tr>
 </table>
